# FineTrace

./: CMakeLists.txt  README.md  mermaid_full.mermaid  mermaid_simple.mermaid  tool.cc  unified_tracer.h
build_utils/: CMakeLists.txt
cl_tracer/: CMakeLists.txt  README.md  cl_api_collector.h  cl_ext_callbacks.h  cl_ext_collector.cc  cl_kernel_collector.h  cl_tracer.h  tool.cc
collectors/cl_collector/: cl_api_callbacks.h  cl_api_collector.h  cl_ext_callbacks.h  cl_ext_collector.h  cl_kernel_collector.h
collectors/ze_collector/: ze_api_collector.h  ze_event_cache.h  ze_kernel_collector.h
loader/: init.cc  loader.cc  loader.h  tool.h
samples/cl_gemm/: README.md  main.cc
samples/ze_gemm/: README.md  main.cc
utils/: cl_api_tracer.h  cl_utils.h  correlator.cc  correlator.h  demangle.h  finetrace_assert.h  gen_binary_decoder.h  gtpin_utils.h  leb128.h  logger.h  metric_device.h  metric_utils.h  shared_library.h  trace_guard.cc  trace_guard.h  trace_options.h  utils.h  ze_utils.h
utils/gpu_elf_parser/: CMakeLists.txt
utils/gpu_elf_parser/include/: elf_parser.h  elf_parser.hpp  elf_parser_def.hpp  elf_parser_mapping.h
utils/gpu_elf_parser/src/: dwarf_state_machine.cpp  dwarf_state_machine.hpp  elf_parser.cpp  section_debug_abbrev.cpp  section_debug_abbrev.hpp  section_debug_info.cpp  section_debug_info.hpp  section_debug_line.cpp  section_debug_line.hpp
utils/gtpin_utils/: CMakeLists.txt
utils/gtpin_utils/doc/: interfaces.puml  results.puml  writer.puml
utils/gtpin_utils/include/: capsule.hpp  control.hpp  def_gpu.hpp  profiler.hpp  profiler_base.hpp  results.hpp  tool.hpp  tool_factory.hpp  writer.hpp
utils/gtpin_utils/src/: capsule.cpp  control.cpp  profiler.cpp  results.cpp  tool.cpp  tool_factory.cpp  writer.cpp
utils/gtpin_utils/src/macro/: add.cpp  and.cpp  atomic_store.cpp  cbit.cpp  cmp.cpp  mov.cpp  mul.cpp  not.cpp  or.cpp  sel.cpp  shl.cpp  shr.cpp  sub.cpp  xor.cpp
ze_tracer/: CMakeLists.txt  README.md  gen_tracing_callbacks.py  tool.cc  ze_tracer.h
